[package]
name = "zk-psi-verifier"
version = "0.1.0"
edition = "2024"
authors = ["Kunal Singh Dadhwal <kunalsinghdadhwal@gmail.com>"]
license = "MIT"
description = "Zero-knowledge Private Set Intersection verifier using Halo2 for zkVerify"
repository = "https://github.com/kunalsinghdadhwal/zk-psi-verifier"
readme = "README.md"
keywords = ["Zero-knowledge", "halo2"]

[dependencies]
halo2_proofs = { version = "0.3", features = ["dev-graph"] }
halo2_gadgets = "0.3"
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"
rand = "0.8"
rand_xorshift = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
plotters = "0.3.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "zk-psi-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "zk-psi-cli"
path = "src/bin/cli.rs"

[lib]
name = "zk_psi_verifier"
path = "src/lib.rs"
